# interp-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  gpt2_induction.yaml
reports/: index.html  nla_toy_card.md  nla_toy_summary.json  patching_case_study.md  patching_summary.json  sae_feature_cards.json  sae_feature_cards.md
reports/gpt2/: index.html  nla_toy_card.md  nla_toy_summary.json  patching_case_study.md  patching_summary.json  sae_feature_cards.json  sae_feature_cards.md
src/interp_lab/: __init__.py  activations.py  browser.py  cli.py  config.py  data.py  hf_model.py  models.py  nla_toy.py  patching.py  sae.py  toy_model.py
tests/: test_browser.py  test_models.py  test_patching.py  test_sae_nla.py
